@@ -11,6 +11,7 @@ NEXT RELEASE
  - ArrayOfType and ObjectOfType now apply their inner type's coercions.
  - Renamed o.Constructor to o.Class, because that is what it is and it is
    less to type.
+ - Greatly simplify the trait types.
 
 0.0.8 : 2014-01-03
  - In addition to accepting an Array, o.DuckType now accepts an Object,
